# airlux_api_reverse_proxy

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  app.db  docker-compose.dev.yml  docker-compose.pre-prod.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  test.db  used_ports.json
.github/workflows/: docker-image.yml  docker-image_api.yml  docker-image_db.yml  docker-image_ssh.yml
migrations/2024-03-01-141921_create_ports/: down.sql  up.sql
services/: authorize_key.conf
src/: db.rs  errors.rs  main.rs  port.rs  routes.rs  types.rs
src/api/: main.rs  port.rs  routes.rs
src/api/db/: schema.rs
src/authorize_key/: main.rs
src/db/: models.rs  schema.rs
