[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api/main.rs"


[[bin]]
name = "authorize_key"
path = "src/authorize_key/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = "1.0.81"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }

[package.metadata.default-run]
binary = "api"
